cmake_minimum_required(VERSION 3.16)
project(cPL C)

set(CMAKE_C_STANDARD 99)

add_executable(cPL main.c copy_file.h type_transformer.h fahr_celsius_print.h char_count.h word_count.h all_count_by_arr.h print_longest_line.h lib.h types.h string_pattern.h rpn.h op_stack.h next_val_or_op.h buf_stack.h quick_sort.h swap.h macro.h point-and-array.h address_arithmetic.h string_pointer_and_fn.h pointer_array.h multi_dimension_array.h pointer_to_function.h struct.h searchTable.h)